// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListInline component should render correctly with children 1`] = `
<ul
  className="sc-iBdmCd nsMAh"
>
  <li
    className="sc-fsYeqs foPRSE"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-fsYeqs foPRSE"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-fsYeqs foPRSE"
  >
    <div>
      an
    </div>
  </li>
  <li
    className="sc-fsYeqs foPRSE"
  >
    <div>
      example
    </div>
  </li>
</ul>
`;

exports[`ListInline component should render correctly without children 1`] = `
<ul
  className="sc-iBdmCd nsMAh"
/>
`;

exports[`ListInline component should render with custom padding 1`] = `
<ul
  className="sc-iBdmCd nsMAh"
>
  <li
    className="sc-fsYeqs foPRSE"
  >
    <div>
      This
    </div>
  </li>
  <li
    className="sc-fsYeqs foPRSE"
  >
    <div>
      is
    </div>
  </li>
  <li
    className="sc-fsYeqs foPRSE"
  >
    <div>
      fun
    </div>
  </li>
</ul>
`;
